--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,6 +1,6 @@
 <div class="show">
     <div class="column1">
-      <div class="show_tool">
+      <div class="show_tool card-body">
         <h1 class="card-title"><%= @tool.name  %> </h1>
         <h2>Price : <%= @tool.price  %>$ /day </h2>
         <h4 id="description">Description:</h4>
