--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -2,7 +2,7 @@
     <div class="column1">
       <div class="show_tool card-body">
         <h1 class="card-title"><%= @tool.name  %> </h1>
-        <h2>Price : <%= @tool.price  %>$ /day </h2>
+        <h2><span id="price"><%= @tool.price  %>$ /Day</span> </h2>
         <h4 id="description">Description:</h4>
         <p class="card-text"><%= @tool.description %></p>
         <h4 id="address">Material's Address:</h4>
