--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -14,6 +14,10 @@ body{
   visibility: visible;
 }
 
+#price{
+  color: #ff431e;
+}
+
 
 #stickbar{
   overflow: hidden;
@@ -72,9 +76,11 @@ body{
   color: #484848;
 }
 
-// .right_menu{
-//   width: 600px;
-// }
+.new_user, .user_login{
+  width: 600px;
+  margin-left: 600px
+}
+
 
 .search_bar{
   margin-top: 20px;
