resized css for screen

--- a/app/assets/stylesheets/tool.scss
+++ b/app/assets/stylesheets/tool.scss
@@ -10,6 +10,11 @@
   border-radius: 2px;
 }
 
+.row{
+  margin: 60px;
+  margin-top: 50px;
+}
+
 .create_tool{
   display: grid;
   grid-template-columns: 1fr 1fr;
