--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -24,14 +24,11 @@ body{
   background-color: #333;
 }
 
-.row{
-  margin: 30px;
-  margin-top: 50px;
-}
+
 
 .show{
   display: grid;
-  grid-template-columns: 500px 600px 600px;
+  grid-template-columns: 500px 500px 500px;
   margin: 50px;
 }
 
@@ -69,11 +66,10 @@ body{
 
 .nav-item{
   margin: 20px;
-  margin-left: 50px;
 }
 
 .nav-link{
-  color: #484848;
+  color: black;
 }
 
 .new_user, .user_login{
@@ -88,11 +84,11 @@ body{
 
 
 #search {
-  width: 500px;
+  width: 400px;
   height: 48px;
 }
 
-@media only screen and (max-width: 1312px){
+@media only screen and (max-width: 1200px){
   #search{
     width : 200px;
   }
