--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
                 <%= link_to 'List your Material', new_tool_path, class:"btn btn-warning btn-lg inline " %>
               </div>
               <div class="nav-item" id="user_info">
-                Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %> Your Location:  <span id="user_address"><%= current_user.address %></span>
+                Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %> Location:  <span id="user_address"><%= current_user.address %></span>
               </div>
               <div class="nav-item">
                 <%= link_to 'Log out', session_path("current"), :method => :delete, class:"nav-link justify-content-end"  %>
