--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -20,13 +20,11 @@ body{
 
 
 #stickbar{
-  overflow: hidden;
   background-color: #333;
 }
 
 
-
-.show{
+.tool_show{
   display: grid;
   grid-template-columns: 500px 500px 500px;
   margin: 50px;
@@ -42,7 +40,7 @@ body{
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1
+  z-index: 1000;
 }
 
 .content {
