--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,15 +43,21 @@
                 <% end %>
               </div>
               <% if current_user %>
-              <div class="nav-item">
+              <div class="nav-item ">
                 <%= link_to 'List your Material', new_tool_path, class:"btn btn-warning btn-lg inline " %>
               </div>
-              <div class="nav-item" id="user_info">
-                Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %> Location:  <span id="user_address"><%= current_user.address %></span>
-              </div>
-              <div class="nav-item">
-                <%= link_to 'Log out', session_path("current"), :method => :delete, class:"nav-link justify-content-end"  %>
-              </div>
+              <li class="nav-item dropdown">
+                <p class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <%= current_user.full_name %>
+                </p>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <%= link_to("Your profile", user_path(current_user), class: "dropdown-item", id: "user_info", :"data-attribute" => "#{current_user.address}") %>
+                  <a class="dropdown-item" href="#">Your Reservations</a>
+                  <a class="dropdown-item" href="#">Your Materials</a>
+                  <div class="dropdown-divider"></div>
+                  <%= link_to 'Log out', session_path("current"), :method => :delete, class:"dropdown-item"  %>
+                </div>
+              </li>
               <% else %>
               <div class="nav-item">
                 <%= link_to 'Log In', new_session_path, class:"nav-link" %>
