--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,4 +1,4 @@
-<div class="show">
+<div class="tool_show">
     <div class="column1">
       <div class="show_tool card-body">
         <h1 class="card-title"><%= @tool.name  %> </h1>
