--- a/app/views/users/reservations_received.html.erb
+++ b/app/views/users/reservations_received.html.erb
@@ -1,5 +1,5 @@
 <% if current_user == @user %>
-  <h2>Reservations for your tools:</h2>
+  <h2>Reservations Received for your material:</h2>
   <div class= "reservations">
     <div class="pending_res">
       <h3>Pending:</h3>
