--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,9 +46,9 @@
               <div class="nav-item ">
                 <%= link_to 'List your Material', new_tool_path, class:"btn btn-warning btn-lg inline " %>
               </div>
-              <ul class="nav-item dropdown ml-auto">
-                <li class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <%= current_user.full_name %>
+              <ul class="nav-item dropdown ml-auto ">
+                <li class="nav-link dropdown ml-auto" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <%= current_user.first_name[0] + current_user.last_name[0] %>
                 </li>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <%= link_to("Your profile", user_path(current_user), class: "dropdown-item", id: "user_info", :"data-attribute" => "#{current_user.address}") %>
