--- a/app/views/users/reservations_done.html.erb
+++ b/app/views/users/reservations_done.html.erb
@@ -5,5 +5,6 @@
   To: <%= res.reservation_time_end.strftime("%m/%d/%Y") %>
   Status: <%= res.status %>
   <p>Days: <%= res.numbers_of_days %></p>
-  <p> Total Price: <%= res.numbers_of_days * res.tool.price %> $ </p>
+  <p>Price <%= res.tool.price %> $/day</p>
+  <p> Total Price: <%= res.numbers_of_days * res.tool.price %> CAD$ </p>
 <% end %>
