--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,42 +31,51 @@
   <body>
     <header>
         <div id="stickbar" class ="sticky">
-          <nav class="navbar navbar-expand-sm navbar-light bg-light">
-           <div class="navbar-nav">
-                <a href="/" class="navbar-brand">
-                  <%= image_tag 'caniborrowlogo.png', :width => "150", :length =>"100"  %>
-                </a>
-              <div class="search_bar">
-                <%= form_tag(tools_path, method: :get, class: "form-inline") do %>
-                <%= text_field_tag :search, params[:search], class: "form-control mr-sm-2", placeholder: "search" %>
-                <%= submit_tag "Search", class: "btn btn-outline-primary my-2 my-sm-0",  id: "searchbtn"  %>
-                <% end %>
-              </div>
-              <% if current_user %>
-              <div class="nav-item ">
-                <%= link_to 'List your Material', new_tool_path, class:"btn btn-warning btn-lg inline " %>
-              </div>
-              <ul class="nav-item dropdown ml-auto ">
-                <li class="nav-link dropdown ml-auto" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <%= current_user.first_name[0] + current_user.last_name[0] %>
-                </li>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <%= link_to("Your profile", user_path(current_user), class: "dropdown-item", id: "user_info", :"data-attribute" => "#{current_user.address}") %>
-                  <a class="dropdown-item" href= <%= "/users/#{current_user.id}/reservations_received" %>>Reservations Received</a>
-                  <a class="dropdown-item" href=<%= "/users/#{current_user.id}/reservations_done" %>>Reservations Booked</a>
-                  <li class="dropdown-divider"></li>
-                  <%= link_to 'Log out', session_path("current"), :method => :delete, class:"dropdown-item"  %>
-                </div>
-              </ul>
-              <% else %>
-              <div class="nav-item">
-                <%= link_to 'Log In', new_session_path, class:"nav-link" %>
-              </div>
-              <div class="nav-item">
-                <%= link_to 'Sign Up', new_user_path, class:"nav-link" %>
-              </div>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a href="/" class="navbar-brand">
+              <%= image_tag 'caniborrowlogo.png', :width => "150", :length =>"100"  %>
+            </a>
+            <div class="search_bar">
+              <%= form_tag(tools_path, method: :get, class: "form-inline") do %>
+              <%= text_field_tag :search, params[:search], class: "form-control mr-sm-2", placeholder: "search" %>
+              <%= submit_tag "Search", class: "btn btn-outline-primary my-2 my-sm-0",  id: "searchbtn"  %>
               <% end %>
             </div>
+            <% if current_user %>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
+
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <%= current_user.first_name[0] + current_user.last_name[0] %>
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">
+                      <%= link_to("Your profile", user_path(current_user), class: "dropdown-item", id: "user_info", :"data-attribute" => "#{current_user.address}") %>
+                    </a>
+                    <a class="dropdown-item" href= <%= "/users/#{current_user.id}/reservations_received" %>>Reservations Received</a>
+                    <a class="dropdown-item" href=<%= "/users/#{current_user.id}/reservations_done" %>>Reservations Booked</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#"><%= link_to 'Log out', session_path("current"), :method => :delete, class:"dropdown-item"  %></a>
+                  </div>
+                </li>
+                <li class="nav-item active">
+                  <%= link_to 'List your Material', new_tool_path, class:"btn btn-warning btn-lg inline " %>
+                </li>
+              </ul>
+            </div>
+            <% else %>
+            <div class="user_option ml-auto">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <%= link_to 'Log In', new_session_path, class:"nav-link" %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to 'Sign Up', new_user_path, class:"nav-link" %>
+                </li>
+              </ul>
+            </div>
+            <% end %>
           </nav>
         </div>
     </header>
