css added for reservation done

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -84,6 +84,17 @@ body{
   margin-left: 600px
 }
 
+.reservations_done{
+  width: 500px;
+  padding: 20px;
+  margin: 0 auto;
+  border: 0.5px solid lightgrey;
+  border-radius: 2px;
+}
+
+.reservation_done{
+  padding: 10px;
+}
 
 
 #search {
