--- a/app/assets/stylesheets/tool.scss
+++ b/app/assets/stylesheets/tool.scss
@@ -35,18 +35,28 @@
 .reservations{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 10px;
 }
 
 .pending_res{
   grid-column: 1fr;
+  padding: 20px;
+  border: 0.5px solid lightgrey;
+  border-radius: 2px;
 }
 
 .accepted_res{
   grid-column: 1fr;
+  padding: 20px;
+  border: 0.5px solid lightgrey;
+  border-radius: 2px;
 }
 
 .declined_res{
   grid-column: 1fr;
+  padding: 20px;
+  border: 0.5px solid lightgrey;
+  border-radius: 2px;
 }
 
 .reservation_form{
