--- a/app/views/users/reservations_received.html.erb
+++ b/app/views/users/reservations_received.html.erb
@@ -4,6 +4,7 @@
     <div class="pending_res">
       <h3>Pending:</h3>
       <% @reservations_pending.each do |res|  %>
+        <div class="reservation_received">
           <h4><%= res.tool.name %></h4>
           <p>From: <%= res.reservation_time_start.strftime("%m/%d/%Y") %>
               To: <%= res.reservation_time_end.strftime("%m/%d/%Y") %></p>
@@ -15,11 +16,14 @@
           <p><%= link_to 'Accept', "/tools/#{res.tool.id}/reservations/#{res.id}?status=accepted" , method: :put, class: "btn btn-success" %>
             <%= link_to 'Decline', "/tools/#{res.tool.id}/reservations/#{res.id}?status=declined" , method: :put, class: "btn btn-danger" %>
           </p>
+        </div>
+        <hr>
       <% end %>
       </div>
       <div class="accepted_res">
         <h3>Approved:</h3>
       <% @reservations_accepted.each do |res| %>
+        <div class="reservation_received">
           <h4><%= res.tool.name %></h4>
           <p>From: <%= res.reservation_time_start.strftime("%m/%d/%Y")%>
             To: <%= res.reservation_time_end.strftime("%m/%d/%Y") %></p>
@@ -28,16 +32,21 @@
           <p>Price <%= res.tool.price %> $/day</p>
           <p> Total Price: <%= res.numbers_of_days * res.tool.price %> CAD$ </p>
           <p>Status: <%= res.status %></p>
+        </div>
+        <hr>
       <% end %>
       </div>
       <div class="declined_res">
         <h3>Declined:</h3>
       <% @reservations_declined.each do |res| %>
+        <div class="reservation_received">
           <h4><%= res.tool.name %></h4>
           <p>From: <%= res.reservation_time_start.strftime("%m/%d/%Y") %>
               To: <%= res.reservation_time_end.strftime("%m/%d/%Y") %></p>
           <p>Requestor:<%= res.user.full_name %></p>
           <p>Status: <%= res.status %></p>
+        </div>
+        <hr>
       <% end %>
       </div>
   </div>
