links added between reservations and profile

--- a/app/views/users/reservations_received.html.erb
+++ b/app/views/users/reservations_received.html.erb
@@ -8,7 +8,7 @@
           <h4><%= res.tool.name %></h4>
           <p>From: <%= res.reservation_time_start.strftime("%m/%d/%Y") %>
               To: <%= res.reservation_time_end.strftime("%m/%d/%Y") %></p>
-          <p>Requestor: <%= res.user.full_name %></p>
+          <p>Requestor: <%= link_to "#{res.user.full_name}", "/users/#{res.user.id}" %></p>
           <p>Days: <%= res.numbers_of_days %></p>
           <p>Price <%= res.tool.price %> $/day</p>
           <p> Total Price: <%= res.numbers_of_days * res.tool.price %> CAD$ </p>
@@ -27,7 +27,7 @@
           <h4><%= res.tool.name %></h4>
           <p>From: <%= res.reservation_time_start.strftime("%m/%d/%Y")%>
             To: <%= res.reservation_time_end.strftime("%m/%d/%Y") %></p>
-          <p>Requestor:<%= res.user.full_name %></p>
+          <p>Requestor: <%= link_to "#{res.user.full_name}", "/users/#{res.user.id}" %></p>
           <p>Days: <%= res.numbers_of_days %></p>
           <p>Price <%= res.tool.price %> $/day</p>
           <p> Total Price: <%= res.numbers_of_days * res.tool.price %> CAD$ </p>
@@ -43,7 +43,7 @@
           <h4><%= res.tool.name %></h4>
           <p>From: <%= res.reservation_time_start.strftime("%m/%d/%Y") %>
               To: <%= res.reservation_time_end.strftime("%m/%d/%Y") %></p>
-          <p>Requestor:<%= res.user.full_name %></p>
+          <p>Requestor: <%= link_to "#{res.user.full_name}", "/users/#{res.user.id}" %></p>
           <p>Status: <%= res.status %></p>
         </div>
         <hr>
