--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <h3>Location:</h3>
 <p><%= @user.address %></p>
 <% if current_user == @user %>
-  <p><%= link_to 'Edit your profile', edit_user_path  %></p>
+  <p><%= link_to 'Edit your profile', edit_user_path, class: "btn btn-warning"  %></p>
 <% end %>
 
 <h2>Current Postings:</h2>
