--- a/app/views/users/_form_user.html.erb
+++ b/app/views/users/_form_user.html.erb
@@ -1,4 +1,8 @@
-
+<% if @user.errors.any? %>
+  <% @user.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+<% end %>
 <%= form_for user do |f| %>
   <div class="form-group">
     <label for="first_name">First name</label>
