--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,9 +1,3 @@
-<% if reservation.errors.any? %>
-  <% reservation.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-<% end %>
-
 <%= form_for([tool, reservation]) do |f| %>
 <div class="reservation_form">
   <div class="form-group">
@@ -17,5 +11,10 @@
   <div class="form-group">
     <%= f.submit "Book this tool", class:"btn btn-primary" %>
   </div>
+  <% if reservation.errors.any? %>
+    <% reservation.errors.full_messages.each do |msg| %>
+      <div class= "alert alert-danger"><%= msg %></div>
+    <% end %>
+  <% end %>
 </div>
 <% end  %>
