--- a/app/views/tools/_form_tool.html.erb
+++ b/app/views/tools/_form_tool.html.erb
@@ -1,10 +1,11 @@
-<% if tool.errors.any? %>
-  <% tool.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-<% end %>
+
 
 <%= form_for tool do |f| %>
+<% if tool.errors.any? %>
+  <% tool.errors.full_messages.each do |msg| %>
+    <div class= "alert alert-danger"><%= msg %></div>
+  <% end %>
+<% end %>
 <div class="form-group">
   <label for="name">Material's name:</label>
   <%= f.text_field :name, :required => true, class: 'form-control'  %>
