--- a/app/views/users/_form_user.html.erb
+++ b/app/views/users/_form_user.html.erb
@@ -1,9 +1,10 @@
+
+<%= form_for user do |f| %>
 <% if @user.errors.any? %>
   <% @user.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
+    <div class="alert alert-danger"><%= msg %></div>
   <% end %>
 <% end %>
-<%= form_for user do |f| %>
   <div class="form-group">
     <label for="first_name">First name</label>
     <%= f.text_field(:first_name, :required => true, class: 'form-control') %>
