--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
             <div class="user_option ml-auto">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <%= link_to 'Log In', new_session_path, class:"nav-link" %>
+                    <%= link_to 'Log In', new_session_path, class:"nav-link", id: "login_button" %>
                 </li>
                 <li class="nav-item">
                     <%= link_to 'Sign Up', new_user_path, class:"nav-link" %>
@@ -81,6 +81,8 @@
     </header>
 
     <main class="content">
+      
+
     <%= yield %>
 
 
