display login form as modal

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -18,6 +18,18 @@ body{
   color: #ff431e;
 }
 
+.user_login{
+  border: 1px solid lightblue;
+  width: 350px;
+  margin: auto;
+  padding: 20px;
+  background: white;
+  border-radius: 2px;
+  z-index: 600;
+  background-color: white;
+  height: 300px;
+}
+
 
 #stickbar{
   background-color: #333;
@@ -81,7 +93,6 @@ body{
 
 .new_user, .user_login{
   width: 600px;
-  margin-left: 600px
 }
 
 .reservations_done{
