Changed some syntaxes

--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="column3">
-      <h2>Borrow this tool:</h2>
+      <h2>Borrow this Material:</h2>
 
       <% if current_user %>
         <%= render partial: 'reservations/form', locals: {tool: @tool, reservation: @reservation} %>
