--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -9,9 +9,9 @@
         <div class="card-body d-flex flex-column" style="width: 18rem;">
           <h2 class="card-title"><%= tool.name %></h2>
           <h4><span id="price"><%= tool.price  %>$ /Day</span></h4>
-          <p class="card-text"><%= tool.description %></p>
+          <p class="card-text">Description: <%= tool.description %></p>
           <p class="toolAddress"><%= tool.address %></p>
-          <p>User: <%=link_to( "#{tool.user.full_name}", user_path(tool.user) )%></p>
+          <p>Material's Owner: <%=link_to( "#{tool.user.full_name}", user_path(tool.user) )%></p>
           <a href=<%= "/tools/#{tool.id}"%> class="btn btn-primary btn-block mt-auto">See posting</a>
         </div>
       </div>
